--- a/caesar-cipher/Gemfile
+++ b/caesar-cipher/Gemfile
@@ -1,4 +1,7 @@
 # frozen_string_literal: true
 
-gem 'rubocop', require: false
-gem 'rubocop-performance', require: false
+source 'https://rubygems.org'
+
+# gem "rails"
+
+gem 'rubocop', '~> 1.75'
